--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "requests (>=2.32.5,<3.0.0)",
     "playwright-stealth (>=2.0.0,<3.0.0)",
+    "pyinstaller (>=6.17.0,<7.0.0)",
 ]
 
 # V---- AGREGA ESTA NUEVA SECCIÓN ----V
