--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "requests (>=2.32.5,<3.0.0)",
     "playwright-stealth (>=2.0.0,<3.0.0)",
     "pyinstaller (>=6.17.0,<7.0.0)",
+    "pydantic (>=2.12.5,<3.0.0)",
 ]
 
 # V---- AGREGA ESTA NUEVA SECCIÓN ----V
